# python3.11_speedtest

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  environment.yml  estimate_pi_cython.pyx  pyproject.toml  run_main_test.py  single_test_run.py
.github/actions/collect_output/: action.yml
.github/actions/python_run/: action.yml
.github/workflows/: main.yml  run.yml
assets/: pi_monte_carlo.pptx
notebookds/: plotting_results.ipynb
notebooks/: plotting_results.ipynb
pi_estimate_in_C/: README.md  pi_estimate  pi_estimate.c  pi_estimate.cpp  run.sh
pi_estimate_in_Go/: run.sh
pi_estimate_in_Rust/: Cargo.toml  README.md  run.sh
pi_estimate_in_Rust/src/: main.rs
pi_estimates/C/: pi_estimate.cpp  run_me.sh
pi_estimates/Cpp/: README.md  pi_estimate  pi_estimate.cpp  run.sh
pi_estimates/Cython_and_Numba/: estimate_pi_cython.pyx  run_cython.sh  run_main_test.py  run_numba.sh  single_test_run.py
pi_estimates/Go/: go.mod  pi  pi_estimate.go
pi_estimates/Julia/: README.md  pi_estimate.jl  run.sh
pi_estimates/Python/: run.sh  run_main_test.py  single_test_run.py
pi_estimates/Rust/: Cargo.toml
pi_estimates/Rust/src/: main.rs
results/: README.md
scripts/: results_analyzer.py
