[tool.poetry]
name = "python3-11-speedtest"
version = "0.2.0"
description = "a simple speed test to compare Python 3.11 to 3.10 (and 3.9 .. 3.5). Now also with many other tests thanks to various awesome people!"
authors = ["Dennis Bakhuis <dennis@bakhuis.nu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python3"}]

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.56.4"
cython = "^0.29.33"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
pydocstyle = "^6.2.3"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
